apps/hasadna-argocd/templates/argocd-server-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-server-https
  namespace: argocd
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  rules:
  - host: "argocd.hasadna.org.il"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: argocd-server
            port:
              name: http
  tls:
  - hosts:
    - "argocd.hasadna.org.il"
    secretName: argocd-server-https-cert
